# django-evolution

./: .gitignore  .readthedocs.yml  .reviewboardrc  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  NEWS  README  README.md  README.rst  conftest.py  dev-requirements.txt  doc-requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini  tox.toml
contrib/internal/: release.py
django-evolution/: models.py
django_evolution/: __init__.py  admin.py  conf.py  consts.py  deprecation.py  diff.py  errors.py  evolve.py  mock_models.py  models.py  mutation.py  mutations.py  mutators.py  placeholders.py  serialization.py  signals.py  signature.py  support.py  utils.py
django_evolution/builtin_evolutions/: __init__.py  admin_move_to_migrations.py  auth_delete_message.py  auth_move_to_migrations.py  auth_unique_together_baseline.py  contenttypes_move_to_migrations.py  contenttypes_unique_together_baseline.py  flatpages_move_to_migrations.py  redirects_move_to_migrations.py  session_expire_date_db_index.py  sites_move_to_migrations.py
django_evolution/compat/: __init__.py  apps.py  commands.py  datastructures.py  db.py  models.py  picklers.py  py23.py  translation.py
django_evolution/db/: __init__.py  common.py  mysql.py  postgresql.py  sql_result.py  sqlite3.py  state.py
django_evolution/evolutions/: __init__.py
django_evolution/evolve/: __init__.py  base.py  evolve_app_task.py  evolver.py  purge_app_task.py
django_evolution/management/: __init__.py  diff.py  signature.py  sql.py
django_evolution/mutations/: __init__.py  add_field.py  base.py  (+10 more)
docs/: Makefile  conf.py  evolution.txt  faq.rst  faq.txt  glossary.rst  how-does-it-work.rst  index.rst  installation.rst  mutations.rst  versioning.rst  writing-evolutions.rst
evolution/: __init__.py  models.py  mutation.py
testapp/: settings.py  urls.py
tests/: default_test_db_settings.py  docker-compose.yaml  pyflakes.exclude  run-pyflakes.py  runtests.py  settings.py  test_db_settings.py.tmpl
(+162 files in other folders)
